@@ -51,10 +51,18 @@
 			<li>default <input type="text" class="val" value="123" /></li>
 			<li>default (html) <span class="useHtml">123</span></li>
 			<li>symbol <span class="symbol">123</span></li>
+      <li>roundToDecimalPlace3 <span class="roundToDecimalPlace3">123.000</span></li>
+      <li>roundToDecimalPlace0 <span class="roundToDecimalPlace0">123.55</span></li>
+      <li>roundToDecimalPlace9 <span class="roundToDecimalPlace9">123.9</span></li>
+      <li>roundToDecimalPlace_-1 <span class="roundToDecimalPlace_-1">123.456</span></li>
+      <li>roundOneUp <span class="roundOneUp">123.999</span></li>
+      <li>roundOneDown <span class="roundOneDown">-123.999</span></li>
+      <li>negativeBrackets <span class="negativeBrackets">(123)</span></li>
 			<li>dropDecimals <span class="dropDecimals">123.00</span></li>
 			<li>dropDecimals and roundDown <span class="dropDecimalsRounding">123.66</span></li>
 			<li>positiveFormat <span class="positiveFormat">123</span></li>
 			<li>negativeFormat <span class="negativeFormat">-123</span></li>
+      <li>doNotRound <span class="doNotRound">9.45</span></li>            
 			<li>decimalSymbol <span class="decimalSymbol">123</span></li>
 			<li>digitGroupSymbol <span class="digitGroupSymbol">123123</span></li>
 			<li>groupDigits <span class="groupDigits">123123</span></li>
@@ -85,8 +93,8 @@
 		<li><div class='UScents-pennies'>1000.05</div></li>
 		<li><div class='USformatted'>$1000.05</div></li>
 		<li><div class='USneg'>-1000</div></li>
-		<li><div class='USextra-decimals'>1000.052324</div></li>
-		<li><div class='USextra-decimals-roundDown'>1000.0588</div></li>
+		<li><div class='USextra-decimals-roundDown'>1000.052324</div></li>
+		<li><div class='USextra-decimals-roundUp'>1000.0588</div></li>
 		<li><div class='USwith-chars'>ABCDEFG1000.05</div></li>
 		<li><div class='USwith-chars-end'>1000.05ABCDEFG</div></li>
 		<li><div class='USwith-chars-mid'>10ABCDEFG00.05</div></li>
